--- a/src/components/HomePage.css
+++ b/src/components/HomePage.css
@@ -2,3 +2,17 @@
   padding: 0;
   margin: 0;
 }
+
+h3 {
+  font-size: 27px;
+  color: #f1720a;
+  text-align: center;
+  margin: 25px;
+}
+
+.paragraph {
+  font-size: 20px;
+  margin: 20px;
+  line-height: 30px;
+  text-align: justify;
+}
