--- a/src/App.css
+++ b/src/App.css
@@ -16,3 +16,10 @@
   border: 2px solid grey;
   border-radius: 10px;
 }
+
+@media (max-width: 768px) {
+  font-size: 18px;
+  width: 90%;
+  margin-top: 80px;
+  padding: 10px;
+}
